rnsc/test_data/integration/error/parser/class_header/only_dir_on_line_recovers.rns
.class
unknown_token ; <- still reported
.class_end